--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,21 +40,20 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-      - name: Validate Gradle
-        uses: gradle/actions/wrapper-validation@v5
-      - name: Setup JDK
-        uses: actions/setup-java@v5
+
+      - name: Setup Gradle Environment
+        uses: ./.github/actions/setup-gradle-env
         with:
-          java-version: '25'
-          distribution: 'microsoft'
-      - name: Make Grade Executable
-        run: chmod +x ./gradlew
+          java-distribution: 'microsoft'
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
           languages: ${{ matrix.language }}
-      - name: build
+
+      - name: Build
         run: ./gradlew build
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
         with:
