--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Setup Gradle Environment
-        uses: ./.github/actions/setup-gradle-env
+        uses: zannagh/versionizer/setup-gradle-env@v1
         with:
           java-distribution: 'microsoft'
 
