ci: leverage composite actions (#63)
* extract publish and main workflows to use composite actions wherever possible
* outsource the versioning and reusable steps to separate repository https://github.com/zannagh/versionizer

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,33 +24,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Validate Gradle Wrapper
-        uses: gradle/actions/wrapper-validation@v5
-
-      - name: Setup JDK
-        uses: actions/setup-java@v5
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v5
-
-      - name: Setup GitVersion
-        uses: gittools/actions/gitversion/setup@v4.2.0
-        with:
-          versionSpec: '6.x'
+      - name: Setup Gradle Environment
+        uses: zannagh/versionizer/setup-gradle-env@v1
 
       - name: Calculate Version
         id: version
-        uses: gittools/actions/gitversion/execute@v4.2.0
+        uses: zannagh/versionizer/calculate-version@v1
 
       - name: Build
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build \
-            -PsemVer="${{ steps.version.outputs.fullSemVer }}" \
-            -Pprerelease="true"
+        run: ./gradlew build -PsemVer="${{ steps.version.outputs.fullSemVer }}" -Pprerelease="true"
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v6
