--- a/.github/actions/check-modrinth-version/action.yml
+++ b/.github/actions/check-modrinth-version/action.yml
@@ -57,27 +57,20 @@ runs:
         while IFS= read -r existing; do
           [[ -z "$existing" ]] && continue
 
-          # Extract mod version from full Modrinth version (strip loader and MC version prefix)
-          # Handles: fabric-1.21.11-0.7.3-pre.7, fabric-26.1-snapshot-5-0.7.3-pre.7
-          EXISTING_MOD_VER=$(echo "$existing" | sed -E 's/^fabric-[0-9.]+-snapshot-[0-9]+-//' | sed -E 's/^fabric-[0-9.]+-pre\.[0-9]+-//' | sed -E 's/^fabric-[0-9.]+-//')
-          EXISTING_NORMALIZED=$(echo "$EXISTING_MOD_VER" | sed 's/-preview\./-pre./')
-
-          # Check for exact match
-          if [[ "$EXISTING_NORMALIZED" == "$MOD_VERSION" ]] || \
-             [[ "$EXISTING_MOD_VER" == "$MOD_VERSION" ]] || \
-             [[ "$EXISTING_MOD_VER" == "$MOD_VERSION_PREVIEW" ]]; then
+          # Check for exact match by checking if existing version ends with our mod version
+          # This avoids fragile prefix-stripping that breaks with grouped display versions
+          if [[ "$existing" == *"-${MOD_VERSION}" ]] || \
+             [[ "$existing" == *"-${MOD_VERSION_PREVIEW}" ]]; then
             EXISTS=true
             echo "Found exact matching version: $existing"
           fi
 
           # Track highest prerelease number for same semver
-          if [[ -n "$SEMVER" ]]; then
-            EXISTING_SEMVER=$(echo "$EXISTING_MOD_VER" | grep -oE '^[0-9]+\.[0-9]+\.[0-9]+' || echo "")
-            if [[ "$EXISTING_SEMVER" == "$SEMVER" ]]; then
-              EXISTING_PRE=$(echo "$EXISTING_MOD_VER" | grep -oE '(pre|preview)\.[0-9]+' | grep -oE '[0-9]+$' || echo "0")
-              if [[ -n "$EXISTING_PRE" && "$EXISTING_PRE" -gt "$HIGHEST_PRERELEASE" ]]; then
-                HIGHEST_PRERELEASE="$EXISTING_PRE"
-              fi
+          # Check if existing version contains our semver (e.g., -0.7.10- or -0.7.10 at end)
+          if [[ -n "$SEMVER" ]] && echo "$existing" | grep -qE "\-${SEMVER}(\-|$)"; then
+            EXISTING_PRE=$(echo "$existing" | grep -oE '(pre|preview)\.[0-9]+' | tail -1 | grep -oE '[0-9]+$' || echo "0")
+            if [[ -n "$EXISTING_PRE" && "$EXISTING_PRE" -gt "$HIGHEST_PRERELEASE" ]]; then
+              HIGHEST_PRERELEASE="$EXISTING_PRE"
             fi
           fi
         done <<< "$VERSIONS"
