--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -172,13 +172,23 @@ jobs:
             -PsemVer="${{ steps.mod-ver.outputs.version }}" \
             -Pprerelease="${{ steps.mod-ver.outputs.is_prerelease }}"
 
+      - name: Stage Unique Artifacts
+        run: |
+          mkdir -p staging
+          find fabric/versions neoforge/versions -path '*/build/libs/*.jar' -print0 | while IFS= read -r -d '' jar; do
+            filename=$(basename "$jar")
+            if [[ ! -f "staging/$filename" ]]; then
+              cp "$jar" "staging/$filename"
+            fi
+          done
+          echo "Staged artifacts:"
+          ls -la staging/
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v6
         with:
           name: armor-hider-${{ steps.mod-ver.outputs.version }}
-          path: |
-            fabric/versions/**/build/libs/*.jar
-            neoforge/versions/**/build/libs/*.jar
+          path: staging/*.jar
           if-no-files-found: error
 
   changelog:
