why am i doing this to me

--- a/fabric/versions/fabric-26.1-snapshot-8/gradle.properties
+++ b/fabric/versions/fabric-26.1-snapshot-8/gradle.properties
@@ -1,4 +1,5 @@
 mod_loader=fabric
 java.version=25
-fabric.minecraft_version=>=26.1-alpha.7 <=26.1-alpha.9
+fabric.minecraft_version_range=>=26.1-alpha.7 <=26.1-alpha.9
+fabric.minecraft_version=26.1-alpha.8
 neoforge.minecraft_version=
