--- a/fabric/versions/fabric-1.20/gradle.properties
+++ b/fabric/versions/fabric-1.20/gradle.properties
@@ -1,4 +1,5 @@
 mod_loader=fabric
 java.version=17
-fabric.minecraft_version=>=1.20 <=1.20.1
+fabric.minecraft_version_range=>=1.20 <=1.20.1
+fabric.minecraft_version=1.20
 neoforge.minecraft_version=
