--- a/fabric/versions/fabric-1.21.11/gradle.properties
+++ b/fabric/versions/fabric-1.21.11/gradle.properties
@@ -1,4 +1,5 @@
 mod_loader=fabric
 java.version=21
-fabric.minecraft_version=>=1.21.11 <=1.21.11
+fabric.minecraft_version_range=1.21.11
+fabric.minecraft_version=1.21.11
 neoforge.minecraft_version=
