--- a/fabric/versions/fabric-1.21.9/gradle.properties
+++ b/fabric/versions/fabric-1.21.9/gradle.properties
@@ -1,4 +1,5 @@
 mod_loader=fabric
 java.version=21
-fabric.minecraft_version=>=1.21.9 <=1.21.10
+fabric.minecraft_version_range=>=1.21.9 <=1.21.10
+fabric.minecraft_version=1.21.9
 neoforge.minecraft_version=
