--- a/fabric/versions/fabric-26.1-snapshot-2/gradle.properties
+++ b/fabric/versions/fabric-26.1-snapshot-2/gradle.properties
@@ -1,4 +1,5 @@
 mod_loader=fabric
 java.version=25
-fabric.minecraft_version=>=26.1-alpha.1 <=26.1-alpha.6
+fabric.minecraft_version_range=>=26.1-alpha.1 <=26.1-alpha.6
+fabric.minecraft_version=26.1-alpha.2
 neoforge.minecraft_version=
