--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.configureondemand=true
 org.gradle.configuration-cache=false
 
 mod_loader=
-java.version=17
+java.version=
 fabric.minecraft_version=
 neoforge.minecraft_version=
 
