--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -26,6 +26,6 @@ side="BOTH"
 [[dependencies."armor_hider"]]
 modId="minecraft"
 type="required"
-versionRange="[${minecraft_version}]"
+versionRange="${minecraft_version}"
 ordering="NONE"
 side="BOTH"
