chore: move loader version back

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ java.version=
 fabric.minecraft_version=
 neoforge.minecraft_version=
 
+loader_version=0.18.2
+
 # Mod Properties
 maven_group=de.zannagh.armorhider
 archives_base_name=armor-hider
