--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=false
+org.gradle.parallel=true
 org.gradle.configureondemand=true
-# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+
+mod_loader=
+java.version=
+fabric.minecraft_version=
+neoforge.minecraft_version=
+
 loader_version=0.18.2
-loom_version=1.14-SNAPSHOT
+
 # Mod Properties
 maven_group=de.zannagh.armorhider
 archives_base_name=armor-hider
