--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-org.gradle.configuration-cache=false
+org.gradle.configuration-cache=true
 
-mod_loader=
-java.version=
-fabric.minecraft_version=
-neoforge.minecraft_version=
+# Properties set per-version in branch version directories (common/versions/*, fabric/versions/*, ...):
+# java.version, display_version, fabric.minecraft_version, fabric.minecraft_version_range,
+# neoforge.version, neoforge.minecraft_version_range
 
+# Loom and loader
+loom_version=1.14-SNAPSHOT
 loader_version=0.18.2
 
 # Mod Properties
