--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,4 +1,2 @@
-mod_loader=fabric
-java.version=17
-fabric.minecraft_version=>=1.20 <=1.20.1
-neoforge.minecraft_version=
+java.version=21
+display_version=latest
