--- a/fabric/versions/fabric-1.21.5/gradle.properties
+++ b/fabric/versions/fabric-1.21.5/gradle.properties
@@ -1,5 +1,4 @@
-mod_loader=fabric
 java.version=21
 fabric.minecraft_version_range=>=1.21.5 <=1.21.8
 fabric.minecraft_version=1.21.5
-neoforge.minecraft_version=
+display_version=1.21.5+
