--- a/fabric/versions/fabric-26.1-snapshot-9/gradle.properties
+++ b/fabric/versions/fabric-26.1-snapshot-9/gradle.properties
@@ -1,5 +1,4 @@
-mod_loader=fabric
 java.version=25
 fabric.minecraft_version_range=>=26.1-alpha.7 <=26.1-alpha.9
 fabric.minecraft_version=26.1-alpha.9
-neoforge.minecraft_version=
+display_version=26.1-pre.7+
