--- a/neoforge/versions/neoforge-1.21.10/gradle.properties
+++ b/neoforge/versions/neoforge-1.21.10/gradle.properties
@@ -1,4 +1,4 @@
-mod_loader=neoforge
 java.version=21
-fabric.minecraft_version=
-neoforge.minecraft_version=[1.21.9,1.21.10]
+neoforge.version=21.10.64
+neoforge.minecraft_version_range=[1.21.9,1.21.10]
+display_version=1.21.9+
