--- a/neoforge/versions/neoforge-1.21.11/gradle.properties
+++ b/neoforge/versions/neoforge-1.21.11/gradle.properties
@@ -1,4 +1,4 @@
-mod_loader=neoforge
 java.version=21
-fabric.minecraft_version=
-neoforge.minecraft_version=[1.21.11]
+neoforge.version=21.11.38-beta
+neoforge.minecraft_version_range=[1.21.11]
+display_version=1.21.11
