--- a/neoforge/versions/neoforge-1.21.4/gradle.properties
+++ b/neoforge/versions/neoforge-1.21.4/gradle.properties
@@ -1,4 +1,4 @@
-mod_loader=neoforge
 java.version=21
-fabric.minecraft_version=
-neoforge.minecraft_version=[1.21.4]
+neoforge.version=21.4.156
+neoforge.minecraft_version_range=[1.21.4]
+display_version=1.21.4
