--- a/neoforge/versions/neoforge-1.21.8/gradle.properties
+++ b/neoforge/versions/neoforge-1.21.8/gradle.properties
@@ -1,4 +1,4 @@
-mod_loader=neoforge
 java.version=21
-fabric.minecraft_version=
-neoforge.minecraft_version=[1.21.5,1.21.6,1.21.7,1.21.8]
+neoforge.version=21.8.52
+neoforge.minecraft_version_range=[1.21.5,1.21.6,1.21.7,1.21.8]
+display_version=1.21.5+
