--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx4G
-org.gradle.parallel=true
+org.gradle.parallel=false
 org.gradle.configureondemand=true
 org.gradle.configuration-cache=true
 
@@ -10,6 +10,7 @@ org.gradle.configuration-cache=true
 # Loom and loader
 loom_version=1.14-SNAPSHOT
 loader_version=0.18.2
+quilt_loader_version=0.29.2
 
 # Mod Properties
 maven_group=de.zannagh.armorhider
