ci: update workflows to try and use self-hosted runner but fall back to github runners

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,34 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check-runner:
+    name: Check Runner
+    runs-on: ubuntu-latest
+    outputs:
+      runner: ${{ steps.check.outputs.runner }}
+    steps:
+      - name: Check self-hosted runner availability
+        id: check
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUNNER="ubuntu-latest"
+          if STATUS=$(gh api "repos/${{ github.repository }}/actions/runners" \
+            --jq '.runners[] | select(.name == "armor-hider-runner") | .status' 2>/dev/null); then
+            if [ "$STATUS" = "online" ]; then
+              RUNNER="self-hosted"
+            fi
+          fi
+          echo "Using runner: $RUNNER"
+          echo "runner=$RUNNER" >> $GITHUB_OUTPUT
+
   build:
     name: Build & Test
-    runs-on: ubuntu-latest
+    needs: check-runner
+    runs-on: ${{ needs.check-runner.outputs.runner || 'ubuntu-latest' }}
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v6
