--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,27 @@ env:
   PUBLISH_TO_MODRINTH: 'true'
 
 jobs:
+  check-runner:
+    name: Check Runner
+    runs-on: ubuntu-latest
+    outputs:
+      runner: ${{ steps.check.outputs.runner }}
+    steps:
+      - name: Check self-hosted runner availability
+        id: check
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUNNER="ubuntu-latest"
+          if STATUS=$(gh api "repos/${{ github.repository }}/actions/runners" \
+            --jq '.runners[] | select(.name == "armor-hider-runner") | .status' 2>/dev/null); then
+            if [ "$STATUS" = "online" ]; then
+              RUNNER="self-hosted"
+            fi
+          fi
+          echo "Using runner: $RUNNER"
+          echo "runner=$RUNNER" >> $GITHUB_OUTPUT
+
   analyze:
     name: Analyze Changes
     runs-on: ubuntu-latest
@@ -129,9 +150,12 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
-    needs: [analyze, check-modrinth]
+    runs-on: ${{ needs.check-runner.outputs.runner || 'ubuntu-latest' }}
+    needs: [analyze, check-modrinth, check-runner]
     if: "!cancelled() && needs.analyze.result == 'success'"
+    defaults:
+      run:
+        shell: bash
     outputs:
       mod_version: ${{ steps.mod-ver.outputs.version }}
       is_prerelease: ${{ steps.mod-ver.outputs.is_prerelease }}
