ci: address PR comments

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,18 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.RUNNER_TOKEN }}
         run: |
-          RUNNER="ubuntu-latest"
+          RUNNER='["ubuntu-latest"]'
           if STATUS=$(gh api "repos/${{ github.repository }}/actions/runners" \
-            --jq '.runners[] | select(.name == "armor-hider-runner") | .status' 2>/dev/null); then
+            --jq '.runners[] | select(.name == "armor-hider-runner") | .status' 2>&1); then
             if [ "$STATUS" = "online" ]; then
-              RUNNER="self-hosted"
+              RUNNER='["self-hosted","Windows","X64"]'
+            elif [ -z "$STATUS" ]; then
+              echo "::warning::Self-hosted runner 'armor-hider-runner' not found. Falling back to ubuntu-latest."
+            else
+              echo "::warning::Self-hosted runner 'armor-hider-runner' has status '$STATUS'. Falling back to ubuntu-latest."
             fi
+          else
+            echo "::warning::Failed to query runner status via gh api. Falling back to ubuntu-latest."
           fi
           echo "Using runner: $RUNNER"
           echo "runner=$RUNNER" >> $GITHUB_OUTPUT
@@ -39,7 +45,7 @@ jobs:
   build:
     name: Build & Test
     needs: check-runner
-    runs-on: ${{ needs.check-runner.outputs.runner || 'ubuntu-latest' }}
+    runs-on: ${{ fromJSON(needs.check-runner.outputs.runner || '["ubuntu-latest"]') }}
     defaults:
       run:
         shell: bash
