--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check-runner:
+    name: Check Runner
+    uses: ./.github/workflows/check-runner.yml
+    secrets: inherit
+
   build:
     name: Build & Test
-    runs-on: ubuntu-latest
+    needs: check-runner
+    runs-on: ${{ fromJSON(needs.check-runner.outputs.runner || '["ubuntu-latest"]') }}
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v6
