--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,11 @@ env:
   PUBLISH_TO_MODRINTH: 'true'
 
 jobs:
+  check-runner:
+    name: Check Runner
+    uses: ./.github/workflows/check-runner.yml
+    secrets: inherit
+
   analyze:
     name: Analyze Changes
     runs-on: ubuntu-latest
@@ -129,9 +134,12 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
-    needs: [analyze, check-modrinth]
+    runs-on: ${{ fromJSON(needs.check-runner.outputs.runner || '["ubuntu-latest"]') }}
+    needs: [analyze, check-modrinth, check-runner]
     if: "!cancelled() && needs.analyze.result == 'success'"
+    defaults:
+      run:
+        shell: bash
     outputs:
       mod_version: ${{ steps.mod-ver.outputs.version }}
       is_prerelease: ${{ steps.mod-ver.outputs.is_prerelease }}
